<resources>
    <string name="app_name">eMarket</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_select">Select</string>
    <string name="text_loading">Loading…</string>
    <string name="text_please_wait">Please wait…</string>
    <string name="text_continue">Continue</string>
    <string name="text_search_button">Search button</string>
    <string name="text_please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="text_additional_notes">Additional Notes</string>
    <string name="text_today">Today</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_last_week">Last week</string>
    <string name="text_sec_ago">sec ago</string>
    <string name="text_min_ago">min ago</string>
    <string name="text_day_ago">day ago</string>
    <string name="text_days_ago">days ago</string>
    <string name="text_search_something">Search for something!</string>
    <string name="curr_eur" translatable="false">€</string>
    <string name="text_options">Options</string>
    <string name="text_go_back">Go back!</string>
    <string name="text_search">Search</string>
    <string name="text_products">Products</string>
    <string name="text_store">Store</string>
    <string name="text_out_of_stock">Out of Stock</string>
    <string name="text_available">Available</string>
    <string name="text_no_products">No products!</string>
    <string name="text_no_products_2">No products found in database.</string>
    <string name="text_no_description">No description.</string>
    <string name="text_product_added_successfully">%1$s has been added successfully!</string>
    <string name="text_product_updated_successfully">%1$s has been updated successfully!</string>
    <string name="edit_this_product">Edit This Product</string>
    <string name="delete_this_product">Delete This Product</string>
    <string name="text_add_new_product">Add a new product</string>
    <string name="text_add_new_product_2">Add a new product for sale!</string>
    <string name="text_add_product">Add Product</string>
    <string name="text_update_product">Update Product</string>
    <string name="text_update_a_product">Update a product</string>
    <string name="text_update_a_product_2">Update a existing product with new details!</string>
    <string name="text_add_to_cart">Add to cart</string>
    <string name="text_no_popular_available">No popular products!</string>
    <string name="text_no_deals_available">No deals available!</string>
    <string name="text_all_categories">All Categories</string>
    <string name="text_remove_from_cart">Remove from cart</string>
    <string name="text_quantity">Quantity</string>
    <string name="text_deals">Deals</string>
    <string name="text_popular">Popular</string>
    <string name="text_view_all">View all</string>
    <string name="text_favorites">Favorites</string>
    <string name="text_no_favorites">No favorites found!</string>
    <string name="text_no_favorites_2">You haven\'t add anything to your favorites yet!</string>
    <string name="text_orders">Orders</string>
    <string name="text_my_orders">My Orders</string>
    <string name="text_no_orders">No orders found!</string>
    <string name="text_no_orders_2">You have no pending or previous orders.</string>
    <string name="text_item_or_items"> item(s)</string>
    <string name="text_arriving">Arriving: </string>
    <string name="text_total">Total: </string>
    <string name="text_order_num_sign">Order #</string>
    <string name="text_items_ordered">Items Ordered</string>
    <string name="text_address">Address</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_delivery_time">Delivery Time</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_order_status">Order Status</string>
    <string name="text_pending">Pending</string>
    <string name="text_processing">Processing</string>
    <string name="text_completed">Completed</string>
    <string name="text_client">Client</string>
    <string name="text_none">None</string>
    <string name="text_edit">Edit</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_subtotal">Subtotal</string>
    <string name="text_delivery_charge">Delivery Charge</string>
    <string name="text_pay_with_credit_card">Pay with credit card</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_cash_on_delivery">Cash on Delivery</string>
    <string name="text_selected_address">Selected Address</string>
    <string name="text_items_receipt">Items Receipt</string>
    <string name="text_credit_card_details">Credit Card Details</string>
    <string name="text_credit_card_details_2">Enter your credit card details to pay.</string>
    <string name="input_text_hint_card_number">Card number</string>
    <string name="text_authorize">Authorize</string>
    <string name="input_text_hint_card_name">Card holder name</string>
    <string name="input_text_hint_card_exp_date">MM/YY</string>
    <string name="input_text_hint_card_cvv">CVV</string>
    <string name="text_order_placed_successfully">Your order has been placed successfully!</string>
    <string name="text_pay_invoice">Pay Invoice</string>
    <string name="text_item_removed_from_cart">Item removed from cart successfully!</string>
    <string name="text_empty_cart">Your cart is empty!</string>
    <string name="text_empty_cart_2">Looks like you haven\'t made your choice yet 😢</string>
    <string name="text_my_cart">My Cart</string>
    <string name="text_profile">Profile</string>
    <string name="text_my_account">My Account</string>
    <string name="text_account_info">Account Info</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_update_profile">Update Profile</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="text_date_registered">Date Registered</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_street_address">Street address</string>
    <string name="text_zip_code">Zip code</string>
    <string name="text_country">Country</string>
    <string name="text_street_number">Street Number</string>
    <string name="text_type">Type</string>
    <string name="text_house_">House</string>
    <string name="text_apartment">Apartment</string>
    <string name="text_other">Other</string>
    <string name="text_admin">Admin</string>
    <string name="text_add_new_address">Add address</string>
    <string name="text_edit_address">Edit address</string>
    <string name="text_no_addresses_2">No saved addresses found, click the button below to add a new one!</string>
    <string name="text_no_addresses">No addresses found!</string>
    <string name="text_address_deleted_confirmation">Your address has been deleted successfully!</string>
    <string name="text_your_address_added_successfully">Your address has been successfully added!</string>
    <string name="text_your_address_updated_successfully">Your address has been successfully updated!</string>
    <string name="text_profile_updated">Your profile has been updated successfully!</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_must_be_enabled">This must be enabled in order to receive push notifications!</string>
    <string name="notifications_enabled">Are Notifications Enabled?</string>
    <string name="is_profile_completed">Are Profile Details Completed?</string>
    <string name="role">Role</string>
    <string name="active_devices">Active Devices</string>
    <string name="text_addresses">Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="text_add_address">Add address</string>
    <string name="text_update_address">Update Address</string>
    <string name="text_additional_notes_address">Add some extra notes. For example: Apartment, 5th floor</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_favorites">Favorites</string>
    <string name="notification_channel_desc">Notifies you when an item in your favorites is back in stock!</string>
    <string name="notification_payload_fav_title">%1$s: Stock updated!</string>
    <string name="notification_payload_fav_body">%1$s is now available in stock 😍</string>
    <string name="notification_add_to_cart">Add to cart</string>
    <string name="notification_mark_as_read">Mark as read</string>
    <string name="text_congratulations">Congratulations!</string>
    <string name="text_account_created">Your account has been\ncreated successfully! You can now\ncontinue using eMarket.</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_product_deleted">Product has been deleted successfully!</string>
    <string name="text_image_selection_failed">Image selection Failed!</string>
    <string name="text_read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="text_error_empty_name">Please enter your full name.</string>
    <string name="text_error_empty_password">Please enter your password.</string>
    <string name="text_error_empty_new_password">Please enter your new password.</string>
    <string name="text_error_empty_confirm_new_password">Please confirm your new password.</string>
    <string name="text_error_invalid_password">Invalid password. Please try again.</string>
    <string name="text_error_empty_email">Please enter your email.</string>
    <string name="text_error_empty_phone">Please enter your phone number.</string>
    <string name="text_error_empty_address">Please enter your address.</string>
    <string name="text_error_empty_zip_code">Please enter your zip code.</string>
    <string name="text_error_empty_product_category">Please select a category for the product.</string>
    <string name="text_error_empty_product_description">Please enter details about the product.</string>
    <string name="text_error_empty_product_name">Please enter the name of the product.</string>
    <string name="text_error_empty_product_price">Please enter the price of the product in #.## format.</string>
    <string name="text_error_empty_product_stock">Please enter the available stock of the product.</string>
    <string name="text_error_user_not_admin">You must be an administrator to use this app!</string>
    <string name="text_an_error_has_occurred">Error has occurred!</string>
    <string name="text_an_error_has_occurred_2">An error has appeared when retrieving details from database! Please try again!</string>
    <string name="text_error_payment_method_not_selected">Please select a payment method!</string>
    <string name="text_must_sign_in">Sign In!</string>
    <string name="text_must_sign_in_2">You must sign in to see this.</string>
    <string name="input_text_hint_sort_type">Order of sorting</string>
    <string name="text_nav_header_sign_in">Sign in or create a new account.</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_sort_results">Sort Results</string>
    <string name="text_order_number">Order Number</string>
    <string name="text_order_date_created">Order Date Created</string>
    <string name="text_sub_total_amount">Sub Total Amount</string>
    <string name="text_user_id">User ID</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_night">Night</string>
    <string name="text_light">Light</string>
    <string name="text_match_system">Match System</string>
    <string name="text_theme">Theme</string>
</resources>