<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:ignore="ContentDescription">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp">

        <TextView
            android:id="@+id/text_Header_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/core_sans_cr_55_medium"
            android:text="@string/text_welcome"
            android:textAlignment="textStart"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_font_size_header_24"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_Header_2"
            style="@style/TextView_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorText"
            android:text="@string/text_nav_header_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Header_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_NavView_Sign_In"
            style="@style/ButtonStyle.White"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginTop="24dp"
            app:rippleColor="@color/colorPrimary"
            android:text="@string/text_sign_in"
            app:iconGravity="textStart"
            app:iconSize="18dp"
            android:textSize="14sp"
            app:icon="@drawable/svg_enter"
            android:gravity="center_vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Header_2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
