<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/image_view_state_icon"
        android:layout_width="@dimen/img_splash_screen_width_180"
        android:layout_height="@dimen/img_splash_screen_height_180"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/svg_state_error_must_sign_in" />

    <TextView
        android:id="@+id/text_view_header_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/core_sans_cr_55_medium"
        android:text="@string/text_must_sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_font_size_header_32"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_state_icon" />

    <TextView
        android:id="@+id/text_view_header_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/core_sans_cr_45_regular"
        android:text="@string/text_must_sign_in_2"
        android:textAlignment="center"
        android:textColor="@color/colorText2"
        android:textSize="@dimen/text_font_size_header_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_header_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_primary_small"
        android:fontFamily="@font/core_sans_cr_65_bold"
        android:gravity="center"
        android:text="@string/text_sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_font_size_header_12"
        app:backgroundTint="@null"
        app:icon="@null"
        app:iconGravity="textStart"
        app:iconSize="16dp"
        app:iconTint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_header_2" />

    <TextView
        android:id="@+id/button_sign_up"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/core_sans_cr_55_medium"
        android:text="@string/text_sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_font_size_header_12"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
        app:layout_constraintStart_toStartOf="@+id/button_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>
